[project]
name = "flask_aws_app"

version = "0.0.0"
description = "Tutorial on how to set up a Flask app on AWS"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["tutorial", "aws", "flask"]
authors = [
    {name = "Filip Rehburg", email = "fil.rehburg@gmail.com" }
]
maintainers = [
    {name = "Filip Rehburg", email = "fil.rehburg@gmail.com" }
]
classifiers = [  # Optional
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    # Pick your license as you wish
    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "peppercorn"
]

[project.optional-dependencies] # Optional
dev = ["check-manifest"]
test = ["coverage", "pytest", "isort", "ruff"]

[project.urls]  # Optional
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.com/pypa/sampleproject/"

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"sample" = ["*.dat"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"